Guard against cursor theme changing in animation timer

PreviewWidget has a timer that advances to the next frame of the current
cursor.

"current" can change in setTheme, we need to stop the animation timer

BUG: 456526


(cherry picked from commit ddf88d21487d505a635a9e4920057363c361c55f)